--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,30 @@
 {
-    "name": "thingirashop-server",
-    "version": "1.0.0",
-    "description": "ThingiraShop POS Backend API",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "node --watch server.js",
-        "seed": "node db/seed.js"
-    },
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "dotenv": "^17.3.1",
-        "express": "^4.21.0",
-        "helmet": "^8.0.0",
-        "json2csv": "^5.0.7",
-        "jsonwebtoken": "^9.0.2",
-        "morgan": "^1.10.0",
-        "pg": "^8.18.0"
-    }
+  "name": "thingirashop-server",
+  "version": "1.0.0",
+  "description": "ThingiraShop POS Backend API",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js",
+    "seed": "node db/seed.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
+    "express": "^4.21.0",
+    "helmet": "^8.0.0",
+    "json2csv": "^5.0.7",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.18.0",
+    "@supabase/supabase-js": "^2.45.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
+  }
 }
