--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "prisma": "^7.4.2"
